--- a/index.html
+++ b/index.html
@@ -106,23 +106,8 @@
 						&nbsp;&nbsp;Help
 					</button>
 				</div>
-				<!--	end  'buttonBank div   -->
-				
-				<div id="mytabs" class="tabs"> <!-- was: class="tabs hidden" -->
-					<h2 id="data_2016">2016</h2>
-						<div class="tabbody">
-							<div id="tabs-1">
-								<div id="grid_2016"></div>
-							</div>
-						</div>
-					<h2 id="dat_2040">2040</h2>
-						<div class="tabbody">
-						   <div id="tabs-2">
-								<div id="grid_2040"></div>
-							</div> 
-						</div>			
-				</div>
-				<!--    end 'mytabs'  -->
+                <div id="town_data_grid">
+                </div>
 			</div>
 			<!--	end 'right_container -->
 			
