Change in label text.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<!--	end 'left_container'   -->
 
 			<div id="right_container" role="application">
-                <h2>Display Data Table for One Municipality:</h2>
+                <h2>Display Data for One Municipality:</h2>
 				<div id='town_dropdown'>
 					<select id="selected_town" title="Select a municipality" tabindex="20">
 						<option value="">Select A Municipality</option>
