Added include of underscore.js; removed include of accessibleTabs lib.

--- a/index.html
+++ b/index.html
@@ -2,45 +2,24 @@
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Vehicle Miles Traveled and Emissions Data Browser</title>
-		
+		<title>Vehicle Miles Traveled and Emissions Data Browser</title>		
 		<!-- CSS Stylesheets -->
 		<link rel="stylesheet" href="simple-sliding-doors/simple-sliding-doors.css" type="text/css" /> 
 		<link rel="stylesheet" href="vmtApp.css" type="text/css" />
-		
+		<!-- JavaScript for jQuery library -->
+		<script src="libs/jquery-1.7.1/jquery-1.7.1.js"></script>
+        <!-- JavaScript for underscore library -->
+        <script src="libs/underscore-min.js"></script>		
 		<!-- d3 Library and Plugins -->
 		<script src="libs/d3-4.8.0/d3.js"></script>
 		<script src="libs/d3-tip-d3v4/index.js"></script>
-		<script src="libs/topojson-3.0.0.js"></script>
-		
-		<!-- JavaScript for jQuery library -->
-		<script src="libs/jquery-1.7.1/jquery-1.7.1.js" type="text/javascript"></script>
-		
-		<!-- JavaScript for Accessible Tabs -- Creates Tabs on Accessible Grid, allows for events to switch between tabs -->
-		<script src="libs/accessibleTabs-1.9.4/js/jquery-1.7.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="libs/accessibleTabs-1.9.4/js/jquery.tabs.js" type="text/javascript" charset="utf-8"></script>
-		<script src="libs/accessibleTabs-1.9.4/js/jquery.syncheight.js" type="text/javascript" charset="utf-8"></script>
-		<script type="text/javascript">
-			$(document).ready(function(){
-				var tabs = $(".tabs").accessibleTabs({
-					tabhead:'h2',
-					fx:"fadeIn",
-					syncheights:true,
-					pagination:false
-				});
-			});
-		</script>
-	
+		<script src="libs/topojson-3.0.0.js"></script>	
 		<!-- JavaScript for Accessible Grids -->
-		<script src="libs/accessibleGrid.js" type="text/javascript"></script>
-		
+		<script src="libs/accessibleGrid.js" type="text/javascript"></script>		
 		<!-- CTPS JavaScript library - has initialized arrays of towns in MPO region and in MA, etc -->
-		<script src="libs/ctpsutils.js" type="text/javascript"></script>
-		
+		<script src="libs/ctpsutils.js" type="text/javascript"></script>		
 		<!-- JavaScript for this application -->
 		<script src="vmtApp.js" type="text/javascript"></script>
-		
-	
 	</head>
 	<body>
 		<div id="wrapper">
