Changed ids for <select> elements.

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 				
 				<div id="theme_box">
 					<div id="theme_dropdown">
-						<h2>Display Map Theme:</h2>
-						<select id="selected_theme" title="Select Map Theme" tabindex="10">
-							<option value="">Select Map Theme</option>
+						<h2>Select Map Theme:</h2>
+						<select id="select_theme" title="Select Map Theme" tabindex="10">
+							<option value="no_theme">Select map theme</option>
 						</select>
 					</div>
 					<div id="year_dropdown">
-						<h2>Display Year:</h2>
-						<select id="display_year" title="Select Year" tabindex="10">
+						<h2>Select year:</h2>
+						<select id="select_year" title="Select Year" tabindex="10">
 							<option value=2016 selected>2016 Base Year</option>
 							<option value=2040>2040 Future Year</option>
 						</select>
@@ -65,8 +65,8 @@
 			<div id="right_container" role="application">
                 <h2>Display Data for One Municipality:</h2>
 				<div id='town_dropdown'>
-					<select id="selected_town" title="Select a municipality" tabindex="20">
-						<option value="">Select A Municipality</option>
+					<select id="select_town" title="Select a municipality" tabindex="20">
+						<option value="">Select a municipality</option>
 					</select>
 				</div>
 				<div id='buttonBank'>
