Update help text.

--- a/vmtAppHelp.html
+++ b/vmtAppHelp.html
@@ -119,10 +119,6 @@
 				You may display the map’s theme by selecting a theme (such as vehicle-miles traveled) from the “Select Map Theme” combo box.	
 				</li>
 				<li>
-				You also may display the map’s theme by changing the tabbed panel on the right side of the application window. 
-                Switching tabs displays the panel’s selected theme (such as vehicle-miles traveled).	
-				</li>
-				<li>
 				You may change the year of modeled data displayed by selecting a year from the “Display Year” combo box. 
                 The available years are the 2016 base year, and 2040 future year, with the 2016 base year as the default.	
 				</li>
@@ -153,13 +149,13 @@
                     </tr>
                 </thead>
                 <tr>
-                    <td>TOWN_ID</td>
-                    <td>Town identification number</td>
-                </tr>
-                <tr>
                     <td>TOWN</td> 
                     <td>Name of town or city</td>
-                </tr>               
+                </tr> 
+                <tr>
+                    <td>TOWN_ID</td>
+                    <td>MassGIS town identification number</td>
+                </tr>                
                 <tr>
                     <td>VMT_TOTAL</td> 
                     <td>Total modeled VMT (miles) per Day</td>
