Hopefully last round of tweaks, based on input from the editorial group.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div id="wrapper">
 
 			<div id="top_container" role="banner">
-				<h1>Boston Region MPO Vehicle Miles Traveled and Emissions Data Browser</h1>
+				<h1>Boston Region MPO Vehicle-Miles Traveled and Emissions Data Browser</h1>
 			</div>
 			<!--	end 'top_container'   -->
 
@@ -89,6 +89,29 @@
                 <div id="town_data_grid_container">
                     <div id="town_data_grid">
                     </div>
+                    <div id="town_data_grid_documentation">
+                        <table id="town_data_grid_documentation_table">
+                            <tr>
+                                <td>CO<sub>2</sub>&nbsp;=&nbsp;carbon dioxide</td>
+                            </tr>
+                            <tr>
+                                <td>CO&nbsp;=&nbsp;carbon monoxide</td>
+                            </tr>  
+                            <tr>
+                                <td>NOx&nbsp;=&nbsp;nitrous oxide</td>
+                            </tr>                            
+                            <tr>
+                                <td>VMT&nbsp;=&nbsp;vehicle-miles travled</td>
+                            </tr>
+                            <tr>
+                                <td>VHT&nbsp;=&nbsp;vehicle-hours travled</td>
+                            </tr> 
+                            <tr>
+                                <td>VOC&nbsp;=&nbsp;volatile organic compounds</td>
+                            </tr>                           
+                        </table>
+                    </div>
+                    
                 </div>
 			</div>
 			<!--	end 'right_container -->
