Formatting tweak suggested by Anne.

--- a/index.html
+++ b/index.html
@@ -92,22 +92,34 @@
                     <div id="town_data_grid_documentation">
                         <table id="town_data_grid_documentation_table">
                             <tr>
-                                <td>CO<sub>2</sub>&nbsp;=&nbsp;carbon dioxide</td>
+                                <td>CO<sub>2</sub></td>
+                                <td>=</td>
+                                <td>carbon dioxide</td>
                             </tr>
                             <tr>
-                                <td>CO&nbsp;=&nbsp;carbon monoxide</td>
+                                <td>CO</td>
+                                <td>=</td>
+                                <td>carbon monoxide</td>
                             </tr>  
                             <tr>
-                                <td>NOx&nbsp;=&nbsp;nitrous oxide</td>
+                                <td>NOx</td>
+                                <td>=</td>
+                                <td>nitrous oxide</td>
+                            </tr>  
+                            <tr>
+                                <td>VHT</td>
+                                <td>=</td>
+                                <td>vehicle-hours travled</td>
                             </tr>                            
                             <tr>
-                                <td>VMT&nbsp;=&nbsp;vehicle-miles travled</td>
+                                <td>VMT</td>
+                                <td>=</td>
+                                <td>vehicle-miles travled</td>
                             </tr>
                             <tr>
-                                <td>VHT&nbsp;=&nbsp;vehicle-hours travled</td>
-                            </tr> 
-                            <tr>
-                                <td>VOC&nbsp;=&nbsp;volatile organic compounds</td>
+                                <td>VOC</td>
+                                <td>=</td>
+                                <td>volatile organic compounds</td>
                             </tr>                           
                         </table>
                     </div>
