--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 		<script src="vmtApp.js" type="text/javascript"></script>
 	</head>
 	<body>
+    
+    <div class="ctpsHeader">
+        <div class="lightBlue"></div>
+        <div class="darkBlue"></div>
+        <div id="banner"><a href="http://ctps.org/" target="_blank" title="Boston MPO"><img style="height:59px" src="./images/ctps_header.png" title="Opens Boston MPO website in a new window"></a></div>
+    </div>
+    
 		<div id="wrapper">
 
 			<div id="top_container" role="banner">
