Changes per feedback from Scott today.

--- a/vmtAppHelp.html
+++ b/vmtAppHelp.html
@@ -91,8 +91,9 @@
 		<h3>Introduction </h3>
 		<p>This application allows users to browse Central Transportation Planning Staff’s (CTPS) database of modeled vehicle-miles traveled (VMT), vehicle-hours traveled (VHT), 
            and emissions data for the 97 cities and towns in the Boston Region Metropolitan Planning Organization (MPO). 
-           The data represent that collected for the 2016 base year and 2040 future year. CTPS modeled these data for <span style="font-style:italic">Destination 2040</span>, 
-           which is the current Long-Range Transportation Plan (LRTP) for the Boston region. The future-year scenarios include proposed key regional 
+           The data represent that collected for the 2016 base year and 2040 future year.
+           CTPS modeled these data for the 2040 Recommended Plan identified in <span style="font-style:italic">Destination 2040</span>, 
+           which is the current Long-Range Transportation Plan (LRTP) for the Boston region. The future-year scenario includes proposed key regional 
            transportation projects identified in the plan (see                  
 			<a href="https://www.ctps.org/data/pdf/plans/LRTP/destination/Destination-2040-LRTP-DRAFT-072519.pdf"/>
 				https://www.ctps.org/data/pdf/plans/LRTP/destination/Destination-2040-LRTP-DRAFT-072519.pdf
